--- a/src/test/TestWindow.ui
+++ b/src/test/TestWindow.ui
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>TestWindow</class>
- <widget class="QMainWindow" name="TestWindow" >
-  <property name="geometry" >
+ <widget class="QMainWindow" name="TestWindow">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,16 +10,103 @@
     <height>300</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>TestWindow</string>
   </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>401</width>
+      <height>251</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>PushButton</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QTextEdit" name="textEdit"/>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>400</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuSadgsd">
+    <property name="title">
+     <string>sadgsd</string>
+    </property>
+    <addaction name="actionSdgsdg"/>
+    <addaction name="actionDd"/>
+    <addaction name="actionExit"/>
+    <addaction name="separator"/>
+    <addaction name="actionDupa"/>
+   </widget>
+   <widget class="QMenu" name="menuKelpo">
+    <property name="title">
+     <string>kelpo</string>
+    </property>
+    <addaction name="actionAsfahm"/>
+    <addaction name="actionVbbvmvb"/>
+   </widget>
+   <addaction name="menuSadgsd"/>
+   <addaction name="menuKelpo"/>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionSdgsdg">
+   <property name="text">
+    <string>sdgsdg</string>
+   </property>
+  </action>
+  <action name="actionDd">
+   <property name="text">
+    <string>dd</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="text">
+    <string>exit</string>
+   </property>
+  </action>
+  <action name="actionDupa">
+   <property name="text">
+    <string>dupa</string>
+   </property>
+  </action>
+  <action name="actionAsfahm">
+   <property name="text">
+    <string>asfahm</string>
+   </property>
+  </action>
+  <action name="actionVbbvmvb">
+   <property name="text">
+    <string>vbbvmvb</string>
+   </property>
+  </action>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
